# Pidgin_KeePassHTTP_Plugin

./: .cproject  .gitignore  .project  AUTHORS  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  ChangeLog  Makefile  cmake_install.cmake  config.h  config.h.cmake
cmake/: FindGLIB2.cmake  FindJsonGlib.cmake  FindLibPurple.cmake
plugin/: CMakeLists.txt  Makefile  cmake_install.cmake  keepasshttp.c
